<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/babynamestring"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginEnd="98dp"
        android:layout_marginRight="98dp"
        android:background="#ffff"
        android:text="@string/babynamestring"
        app:fontFamily="casual"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        tools:text="TextView" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageButton2"
        android:layout_width="149dp"
        android:layout_height="149dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/babynamestring"
        android:layout_marginBottom="94dp"
        android:layout_marginTop="94dp"
        android:background="@drawable/circle5"
        android:src="@drawable/profile_desu"
        app:civ_border_color="#757575"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/babybdaystring"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_centerVertical="true"
        android:layout_marginTop="23dp"
        android:background="#ffff"
        android:text="Gender:"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:background="#ffff"
        android:fontFamily="sans-serif"
        android:text="@string/profile_page"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:background="#ffff"
        android:text="@string/birthday"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="94dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="94dp"
        android:background="#ffff"
        android:text="@string/baby_s_name"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/babynamestring"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/babybdaystring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/babynamestring"
        android:layout_alignTop="@+id/textView7"
        android:layout_marginTop="16dp"
        android:background="#ffff"
        android:text="TextView"
        app:fontFamily="casual"
        app:layout_constraintStart_toStartOf="@+id/babynamestring"
        app:layout_constraintTop_toBottomOf="@+id/babynamestring" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="27dp"
        android:background="#ffff"
        android:text="Age:"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/babyagestring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/babynamestring"
        android:layout_alignTop="@+id/textView10"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:text="TextView"
        app:fontFamily="casual"
        app:layout_constraintStart_toStartOf="@+id/babybdaystring"
        app:layout_constraintTop_toBottomOf="@+id/babybdaystring" />

    <TextView
        android:id="@+id/babygenderstring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/babynamestring"
        android:layout_centerVertical="true"
        android:layout_marginTop="17dp"
        android:background="#ffff"
        android:text="TextView"
        app:fontFamily="casual"
        app:layout_constraintStart_toStartOf="@+id/babyagestring"
        app:layout_constraintTop_toBottomOf="@+id/babyagestring" />

</android.support.constraint.ConstraintLayout>